--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -60,7 +60,8 @@
                 <li>mycelords@gmail.com</li>
             </ul>
             <div>
-                <a href="../index.html"><img src="../imagenes/mycolords_reduccion_logo_reduccion-logo-100px.png"alt="reduccion-logo"></a>
+                <a href="../index.html"><img src="../imagenes/mycolords_reduccion_logo_reduccion-logo-100px.png"
+                        alt="reduccion-logo"></a>
             </div>
         </section>
     </footer>
